Minor fix to img src
Wrong quote marks around serpentine alt, they were not actually a pair. Also quoted the srcs for both.

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,10 @@
 {% block login %}
 <p style="text-align:center;">
 <a href=https://serpentine-h2020.eu>
-  <img src=/usr/local/share/jupyterhub/static/custom/serpentine_logo.png alt=”Serpentine Project Logo” width=300px>
+  <img src="/usr/local/share/jupyterhub/static/custom/serpentine_logo.png" alt="Serpentine Project Logo" width=300px>
 </a>
 <a href=https://soler-horizon.eu>
-  <img src=/usr/local/share/jupyterhub/static/custom/soler_logo.png alt="Soler Project Logo" width=310px>
+  <img src="/usr/local/share/jupyterhub/static/custom/soler_logo.png" alt="Soler Project Logo" width=310px>
 </a>
 </p>
 <br><h3 style="text-align:center;">The SERPENTINE-SOLER Project JupyterHub Server</h3>
