--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 </p>
 <br><h3 style="text-align:center;">The SERPENTINE-SOLER Project JupyterHub Server</h3>
 <p style="text-align:center;">
-For more details, including our terms of service, please see the <a href=https://serpentine-h2020.eu/hub>serpentine</a> or <a href=https://soler-horizon.eu>soler</a> websites.
+For more details, including our terms of service, please see the <a href=https://serpentine-h2020.eu/hub>SERPENTINE</a> or <a href=https://soler-horizon.eu>SOLER</a> websites.
 <br>Resources may be unvailable during times of high demand. Please try again later if this happens.
 </p>
 <div style="text-align:center;" class="service-login">
