Moving Terms to Login Page
Moving the terms of service away from the project pages to the server itself for easier maintenance and visibility in a single location.

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 </p>
 <br><h3 style="text-align:center;">The SERPENTINE-SOLER Project JupyterHub Server</h3>
 <p style="text-align:center;">
-For more details, including our terms of service, please see the <a href=https://serpentine-h2020.eu/hub>SERPENTINE</a> or <a href=https://soler-horizon.eu>SOLER</a> websites.
+For more details please see the <a href=https://serpentine-h2020.eu/hub>SERPENTINE</a> or <a href=https://soler-horizon.eu>SOLER</a> websites.
 <br>Resources may be unvailable during times of high demand. Please try again later if this happens.
 </p>
 <div style="text-align:center;" class="service-login">
@@ -18,4 +18,14 @@ For more details, including our terms of service, please see the <a href=https:/
     Sign in with {{login_service}}
   </a>
 </div>
+<br><h4 style="text-align:center;">Terms of Service</h4>
+
+<p style="text-align:left;">
+Resource Availability
+<br> Users have a maximum limit of 6 GiB of RAM. Kernels exceeding this limit will restart. Users receive 10 GiB of persistent storage, but are strongly advised to ensure they back up anything of importance (e.g., modified notebooks). No guarantees are provided regarding service uptime or data longevity. Inactive accounts may have their storage unrecoverably purged.
+<br> Security and Privacy
+<br> Users are advised not to store any sensitive or confidential data. Persistent storage may be examined by administrators where abuse is suspected, but otherwise not without user consent.
+<br> Abuse
+<br> The SERPENTINE–SOLER JupyterHub server is intended for scientific research and development, primarily using the SERPENTINE–SOLER suite of tools. It is not intended to be used as part of a third-party service or product. Accounts suspected of misuse may be terminated.
+</p>
 {% endblock %}
