--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@ For more details please see the <a href=https://serpentine-h2020.eu/hub>SERPENTI
 </div>
 <br><h4 style="text-align:center;">Terms of Service</h4>
 
-<p style="text-align:left;">
+<p style="text-align:left; max-width: 600px; margin: 0 auto">
 Resource Availability
 <br> Users have a maximum limit of 6 GiB of RAM. Kernels exceeding this limit will restart. Users receive 10 GiB of persistent storage, but are strongly advised to ensure they back up anything of importance (e.g., modified notebooks). No guarantees are provided regarding service uptime or data longevity. Inactive accounts may have their storage unrecoverably purged.
 <br> Security and Privacy
