--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "templates/home.html" %}
+{% block main %}
 {{ super() }}
+{% endblock %}
 {% block guide %}
 <br><h4 style="text-align:center;">User Guide</h4>
 <p style="text-align:left; max-width: 700px; margin: 0 auto">
