Integrating guide further
1) Another image. 2) Link to the guide from the login screen. 3) Best practice advice added.

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
 <br><h3 style="text-align:center;">The SERPENTINE-SOLER Project JupyterHub Server</h3>
 <p style="text-align:center;">
 For more details please see the <a href=https://serpentine-h2020.eu/hub>SERPENTINE</a> or <a href=https://soler-horizon.eu>SOLER</a> websites.
+<br>You can also access a user guide <a href=https://hub-route-serpentine-soler.2.rahtiapp.fi/hub/home>here</a>. You will be redirected after logging in.
 <br>Resources may be unvailable during times of high demand. Please try again later if this happens.
 </p>
 <div style="text-align:center;" class="service-login">
