Fixing home.html mistake
Additional image was present by mistake.

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,6 @@ For full documentation, please see the official user guide <a href=https://jupyt
 <br><h4 style="text-align:center;">Best Practice</h4>
 <p style="text-align:left; max-width: 700px; margin: 0 auto">
 All repositories are automatically updated when your server is restarted. If you modify a notebook, you are advised to use 'Save Notebook As' (see figure below) to ensure it does not change in unexpected ways and you always receive the latest updates. You can read more about the automatic merging <a href="https://nbgitpuller.readthedocs.io/en/latest/topic/automatic-merging.html">here</a>.
-<br><p style="text-align:center;"><img src="https://hub-route-serpentine-soler.2.rahtiapp.fi/hub/static/custom/guide_1.png" width=300px><img src="https://hub-route-serpentine-soler.2.rahtiapp.fi/hub/static/custom/guide_4.png" width=300px></p>
 </p>
+<br><p style="text-align:center;"><img src="https://hub-route-serpentine-soler.2.rahtiapp.fi/hub/static/custom/guide_4.png" width=300px></p>
 {% endblock %}
