Fixing Home.html Error
Needed to be adjusted due to its new location, referencing text that doesn't exist.

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@ All repositories are automatically updated when your server is restarted. If you
 <h4 style="text-align:center;">FAQ</h4>
 <ol type="1" style="text-align:left; max-width: 700px; margin: 0 auto">
   <li>ModuleNotFoundError: No module named x.
-    <br>Please ensure that you have the correct Kernel selected for the notebook you are using as listed above. You can change the kernel by clicking 'Kernel' on the toolbar at the top of the notebook.
+    <br>Please ensure that you have the correct Kernel selected for the notebook you are using. You can find the lists of kernels on the <a href="https://serpentine-h2020.eu/hub/">Serpentine</a> and <a href="https://soler-horizon.eu/hub/">Soler<a> websites. You can change the kernel by clicking 'Kernel' on the toolbar at the top of the notebook.
   </li>
   <li>How do I get a fresh copy of a file?
     <br>If you rename or delete a file it will be replaced when you next start your notebook server.
